Updates images to be sourced from Cloudinary, with updated formats

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Main -->
     <!-- Inline style for background image because Bulma is not super easy to add background images -->
     <section class="hero is-dark is-fullheight-with-navbar" style="
-        background-image: url(assets/images/hero-image.jpg);
+        background-image: url(https://res.cloudinary.com/dydjenltr/image/upload/c_scale,h_1188,q_auto:eco/v1633644098/Images/hero-image_surhd6.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-blend-mode: soft-light;
@@ -88,7 +88,11 @@
             <!-- <h2 class="title has-text-centered pt-5 featured-food">Featured Meal</h2> -->
             <div class="card-image p-2">
               <figure class="image is-4by3">
-                <img src="assets/images/burger.jpg" alt="Placeholder image" />
+                <picture>
+                  <source srcset="https://res.cloudinary.com/dydjenltr/image/upload/c_scale,h_858,q_auto:eco/v1633644338/Images/burger_idn9mw.webp">
+                  <img src="https://res.cloudinary.com/dydjenltr/image/upload/c_scale,h_858,q_auto:eco/v1633644338/Images/burger_idn9mw.jpg" 
+                    alt="Hamburger with fries" />
+                </picture>
               </figure>
             </div>
             <div class="card-content has-text-centered">
@@ -107,7 +111,11 @@
             <!-- <h2 class="title has-text-centered  pt-5 featured-drink">Featured Cocktail</h2> -->
             <div class="card-image p-2">
               <figure class="image is-4by3">
-                <img src="assets/images/old-fashioned.jpg" alt="Placeholder image" />
+                <picture>
+                  <source srcset="https://res.cloudinary.com/dydjenltr/image/upload/c_scale,h_844,q_auto:eco/v1633644338/Images/old-fashioned_jdbaow.webp">
+                  <img src="https://res.cloudinary.com/dydjenltr/image/upload/c_scale,h_844,q_auto:eco/v1633644338/Images/old-fashioned_jdbaow.jpg" 
+                    alt="Cocktail in glass with lemon" />
+                </picture>
               </figure>
             </div>
             <div class="card-content has-text-centered">
