Updates food hero image to be sourced from Cloudinary

--- a/pages/food.html
+++ b/pages/food.html
@@ -45,7 +45,7 @@
   </nav>
   <!-- Main -->
   <section class="hero is-medium is-dark" style="
-      background-image: url(../assets/images/food-hero-image.jpg);
+      background-image: url(https://res.cloudinary.com/dydjenltr/image/upload/c_scale,h_1665,q_auto:eco/v1633644338/Images/food-hero-image_klnqph.jpg);
       background-size:cover;
       background-repeat: no-repeat;
       background-blend-mode: soft-light;
