Updates drink hero image to be sourced from Cloudinary

--- a/pages/drinks.html
+++ b/pages/drinks.html
@@ -46,7 +46,7 @@
   <main>
     <!-- Main -->
     <section class="hero is-medium is-dark" style="
-      background-image: url(../assets/images/background-food.jpg);
+      background-image: url(https://res.cloudinary.com/dydjenltr/image/upload/c_scale,h_1650,q_auto:eco/v1633644338/Images/background-food_pzhfbb.jpg);
       background-size:cover;
       background-repeat: no-repeat;
       background-blend-mode: soft-light;">
